--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,8 +10,6 @@
   <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("kitten.jpg", alt: "kitten"),
-                      "https://rubyonrails.org/" %>
-
 <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200px"),
                       "https://rubyonrails.org/" %>
+<%= link_to image_tag("kitten.jpg") %>
