--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -61,11 +61,10 @@ p {
   letter-spacing: -1px;
   padding-top:9px;
   font-weight:bold;
-}
-
-#log:hover {
-  color: #fff;
-  text-decoration:none;
+  &:hover {
+    color: #fff;
+    text-decoration:none;
+  }
 }
 
 img {
