--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,5 @@
-<%= @user.name %>,<%= @user.email %>,
-<%= @user.created_at %>, <%= @user.updated_at %>
-
-<p>
-    Time.new <%= Time.new %>
-</p>
+<% provide(:title, @user.name) %>
+<h1>
+  <%= gravatar_for @user %>
+  <%= @user.name %>
+</h1>
